src/main/resources/tests/Semantics/bad/characterValExpression2.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
   X : character;
begin
    X := character'val(true); -- Error: type mismatch
end ExampleProcedure;
